--- a/src/app/rooms/rooms.component.html
+++ b/src/app/rooms/rooms.component.html
@@ -4,31 +4,11 @@
 
 <div *ngIf="rooms.availableRooms != undefined && rooms.availableRooms > 0">
     Rooms List
-    <table class="table">
-        <tr>
-            <th>Index</th>
-            <th>Even/Odd</th>
-            <th>Deluxe</th>
-            <th>Amenities</th>
-            <th>Image</th>
-            <th>Price</th>
-            <th>Checkin Time</th>
-            <th>Checkout Time</th>
-            <th>Rating</th>
-        </tr>
-        <tr *ngFor="let room of roomList; let e=even;let o=odd;let i=index">
-            <td>{{i+1}}</td>
-            <td>{{e?'Even':'Odd'}}</td>
-            <td>{{room.roomType}}</td>
-            <td>{{room.amenities | titlecase}}</td>
-            <td>,<img [src]="room.photos" alt="" srcset="" height="50px" width="50px"></td>
-            <td>{{room.price | currency :'EUR'}}</td>
-            <td>{{room.checkinTime | date :'dd/MMM/yyyy'}}</td>
-            <td>{{room.checkoutTime | date}}</td>
-            <td>{{room.rating|number:'2.4-4':'en-us'}}</td>
-        </tr>
-    </table>
+    <hinv-room-list [roomList]="roomList" (selectedRoom)="selectRoom($event)"></hinv-room-list>
 </div>
 
+<div>
+    {{selectedRoom|json}}
+</div>
 
 <button (click)="increement()">Increement</button>
