--- a/src/app/rooms/rooms.component.html
+++ b/src/app/rooms/rooms.component.html
@@ -11,4 +11,8 @@
     {{selectedRoom|json}}
 </div>
 
+<div>
+    <button (click)="addRoom()">Add room</button>
+</div>
+
 <button (click)="increement()">Increement</button>
