AfterViewInit and ViewChild

--- a/src/app/rooms/rooms.component.html
+++ b/src/app/rooms/rooms.component.html
@@ -1,5 +1,7 @@
 <h1>Welcome to {{hotelName}}</h1>
 
+<hinv-header></hinv-header>
+
 {{rooms?.availableRooms ?? 'No rooms'}}
 
 <div *ngIf="rooms.availableRooms != undefined && rooms.availableRooms > 0">
