--- a/src/app/rooms/rooms.component.html
+++ b/src/app/rooms/rooms.component.html
@@ -1,6 +1,8 @@
 <h1>Welcome to {{hotelName}}</h1>
 
 <hinv-header></hinv-header>
+<hinv-header></hinv-header>
+<hinv-header></hinv-header>
 
 {{rooms?.availableRooms ?? 'No rooms'}}
 
