ng-content and ContentChild

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,11 @@
 <!-- <hinv-header></hinv-header> -->
 <ng-template #header></ng-template>
-<hinv-rooms></hinv-rooms>
+<!-- <hinv-rooms>
+    <h1>This from hinc-rooms</h1>
+</hinv-rooms> -->
+
+<hinv-container>
+    <hinv-rooms></hinv-rooms>
+    <hinv-employee></hinv-employee>
+    <h1>This is from ng-content</h1>
+</hinv-container>
