--- a/src/app/room-list/room-list.component.html
+++ b/src/app/room-list/room-list.component.html
@@ -21,6 +21,9 @@
         <td>{{room.checkinTime | date :'dd/MMM/yyyy'}}</td>
         <td>{{room.checkoutTime | date}}</td>
         <td>{{room.rating|number:'2.4-4':'en-us'}}</td>
-        <td><button (click)="selectRoom(room)">Select</button></td>
+        <td>
+            <button (click)="selectRoom(room)">Select</button>
+            <button (click)="deleteRoom(room)">Delete</button>
+        </td>
     </tr>
 </table>
