use of shareReplay to avoid multiple api call

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <!-- <hinv-header></hinv-header> -->
 <ng-template #header></ng-template>
-<!-- <hinv-rooms>
+<hinv-rooms>
     <h1>This from hinc-rooms</h1>
-</hinv-rooms> -->
+</hinv-rooms>
 
 <hinv-container>
     <hinv-rooms></hinv-rooms>
