--- a/src/app/rooms/rooms.component.html
+++ b/src/app/rooms/rooms.component.html
@@ -16,6 +16,8 @@
     {{selectedRoom|json}}
 </div>
 
+<h1>{{getError$ | async}}</h1>
+
 <div>
     <button (click)="addRoom()">Add room</button>
 </div>
