add initial Routing

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!-- <hinv-header></hinv-header> -->
-<ng-template #header></ng-template>
+<!-- <ng-template #header></ng-template>
 <hinv-rooms>
     <h1>This from hinc-rooms</h1>
 </hinv-rooms>
@@ -8,4 +8,6 @@
     <hinv-rooms></hinv-rooms>
     <hinv-employee></hinv-employee>
     <h1>This is from ng-content</h1>
-</hinv-container>
+</hinv-container> -->
+
+<router-outlet> </router-outlet>
