default route and routerLink

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,5 +9,6 @@
     <hinv-employee></hinv-employee>
     <h1>This is from ng-content</h1>
 </hinv-container> -->
-
+<a routerLink="rooms">Rooms</a>
+<a routerLink="employees">Employees</a>
 <router-outlet> </router-outlet>
