--- a/src/app/room-list/room-list.component.html
+++ b/src/app/room-list/room-list.component.html
@@ -22,7 +22,8 @@
         <td>{{room.checkoutTime | date}}</td>
         <td>{{room.rating|number:'2.4-4':'en-us'}}</td>
         <td>
-            <button (click)="selectRoom(room)">Select</button>
+            <!-- <button (click)="selectRoom(room)">Select</button> -->
+            <button mat-flat-button [routerLink]="room.roomNumber">Book Room</button>
             <button (click)="deleteRoom(room)">Delete</button>
         </td>
     </tr>
