--- a/src/app/app-nav/app-nav.component.html
+++ b/src/app/app-nav/app-nav.component.html
@@ -6,6 +6,7 @@
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
       <a mat-list-item routerLink="rooms">Rooms</a>
+      <a mat-list-item routerLink="rooms/add">Add Rooms</a>
       <a mat-list-item routerLink="employees">Employees</a>
     </mat-nav-list>
   </mat-sidenav>
