--- a/src/app/rooms-add/rooms-add.component.html
+++ b/src/app/rooms-add/rooms-add.component.html
@@ -1,13 +1,25 @@
-<div>Okey</div>
-<form action="">
+<form action="POST">
         <div class="form-group">
-            <input type="text" name="roomType" class="form-control">
+            <input type="text" name="roomType" class="form-control" placeholder="room type">
         </div>
-        <div class="form-group"></div>
-        <div class="form-group"></div>
-        <div class="form-group"></div>
-        <div class="form-group"></div>
-        <div class="form-group"></div>
-        <div></div>
+        <div class="form-group">
+            <input type="text" name="amenities" class="form-control" placeholder="amenities">
+        </div>
+        <div class="form-group">
+            <input type="text" name="photos" class="form-control" placeholder="photos">
+        </div>
+        <div class="form-group">
+            <input type="number" name="price" class="form-control" placeholder="price">
+        </div>
+        <div class="form-group">
+            <input type="date" name="checkinTime" class="form-control" placeholder="check in">
+        </div>
+        <div class="form-group">
+            <input type="date" name="checkoutTime" class="form-control" placeholder="check out">
+        </div>
+        <div class="form-group">
+            <input type="number" min="1" max="5" name="rating" class="form-control" placeholder="rating">
+        </div>
 
+        <input type="submit" value="Add">
 </form>
