add room using template driver forms

--- a/src/app/rooms-add/rooms-add.component.html
+++ b/src/app/rooms-add/rooms-add.component.html
@@ -1,25 +1,31 @@
-<form action="POST">
-        <div class="form-group">
-            <input type="text" name="roomType" class="form-control" placeholder="room type">
-        </div>
-        <div class="form-group">
-            <input type="text" name="amenities" class="form-control" placeholder="amenities">
-        </div>
-        <div class="form-group">
-            <input type="text" name="photos" class="form-control" placeholder="photos">
-        </div>
-        <div class="form-group">
-            <input type="number" name="price" class="form-control" placeholder="price">
-        </div>
-        <div class="form-group">
-            <input type="date" name="checkinTime" class="form-control" placeholder="check in">
-        </div>
-        <div class="form-group">
-            <input type="date" name="checkoutTime" class="form-control" placeholder="check out">
-        </div>
-        <div class="form-group">
-            <input type="number" min="1" max="5" name="rating" class="form-control" placeholder="rating">
-        </div>
+{{room | json}}
 
-        <input type="submit" value="Add">
+<div>
+    {{successMessage}}
+</div>
+
+<form (ngSubmit)="addRoom()">
+    <div class="form-group">
+        <input type="text" name="roomType" class="form-control" placeholder="room type" [(ngModel)] = "room.roomType">
+    </div>
+    <div class="form-group">
+        <input type="text" name="amenities" class="form-control" placeholder="amenities" [(ngModel)] = "room.amenities">
+    </div>
+    <div class="form-group">
+        <input type="text" name="photos" class="form-control" placeholder="photos" [(ngModel)] = "room.photos">
+    </div>
+    <div class="form-group">
+        <input type="number" name="price" class="form-control" placeholder="price" [(ngModel)] = "room.price">
+    </div>
+    <div class="form-group">
+        <input type="date" name="checkinTime" class="form-control" placeholder="check in" [(ngModel)] = "room.checkinTime">
+    </div>
+    <div class="form-group">
+        <input type="date" name="checkoutTime" class="form-control" placeholder="check out" [(ngModel)] = "room.checkoutTime">
+    </div>
+    <div class="form-group">
+        <input type="number" min="1" max="5" name="rating" class="form-control" placeholder="rating" [(ngModel)] = "room.rating">
+    </div>
+
+    <input type="submit" value="Add">
 </form>
