--- a/src/app/rooms-add/rooms-add.component.html
+++ b/src/app/rooms-add/rooms-add.component.html
@@ -7,11 +7,16 @@
 <form #addForm="ngForm" (ngSubmit)="addRoom()">
     <div class="form-group">
         <input required type="text" name="roomType" class="form-control" placeholder="room type"
-            [(ngModel)]="room.roomType">
+        [(ngModel)]="room.roomType">
     </div>
     <div class="form-group">
         <input required type="text" name="amenities" class="form-control" placeholder="amenities"
-            [(ngModel)]="room.amenities">
+        #roomsameneties="ngModel"
+        minlength="5" maxlength="20"
+        [(ngModel)]="room.amenities">
+    </div>
+    <div>
+        {{roomsameneties.errors | json}}
     </div>
     <div class="form-group">
         <input required type="text" name="photos" class="form-control" placeholder="photos" [(ngModel)]="room.photos">
