--- a/src/app/rooms-add/rooms-add.component.html
+++ b/src/app/rooms-add/rooms-add.component.html
@@ -4,14 +4,14 @@
     {{successMessage}}
 </div>
 
-<form #addForm="ngForm" (ngSubmit)="addRoom()">
+<form #addForm="ngForm" (ngSubmit)="addRoom(addForm)">
     <div class="form-group">
         <input required type="text" name="roomType" class="form-control" placeholder="room type"
             [(ngModel)]="room.roomType">
     </div>
     <div class="form-group">
         <input required type="text" name="amenities" class="form-control" placeholder="amenities"
-            #roomsameneties="ngModel" email pattern="[a-z]+" minlength="5" maxlength="20" [(ngModel)]="room.amenities">
+            #roomsameneties="ngModel" pattern="[a-z]+" minlength="5" maxlength="20" [(ngModel)]="room.amenities">
     </div>
     <div>
         {{roomsameneties.errors | json}}
