--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,5 +1,11 @@
 <form>
-    <input type="text" name="email" [(ngModel)]="email" placeholder="Give a username">
-    <input type="password" name="password" [(ngModel)]="password" placeholder="Give a password">
+    <input #emailInput="ngModel" hinvHover color="yellow" name="email" type="email" hinvEmailvalidator [(ngModel)] = "email"
+        placeholder="Give a username">
+    <input hinvHover type="password" name="password" [(ngModel)]="password" placeholder="Give a password">
     <button (click)="login()">Login</button>
 </form>
+
+<div>
+    {{emailInput.errors| json}}
+
+</div>
