--- a/src/app/booking/booking.component.html
+++ b/src/app/booking/booking.component.html
@@ -1,5 +1,5 @@
-<!-- <p>booking works!</p>
 {{ bookingForm.value | json }}
+<!-- <p>booking works!</p>
 {{ bookingForm.pristine | json }}
 {{ bookingForm.dirty | json }} -->
 
@@ -17,59 +17,34 @@
       guestCountry: [''],
       guestZipCode: [''],
       guestCount: [''], -->
-      {{bookingForm.invalid | json}}
-      {{bookingForm.valid | json}}
-      <div>
-        <button
-          mat-raised-button
-          color="primary"
-          type="button"
-          (click)="addPassport()"
-        >
-          Add Passport
-        </button>
-      </div>
-      <div>
-        <button
-          mat-raised-button
-          color="primary"
-          type="button"
-          (click)="deletePassport()"
-        >
-          delete Passport
-        </button>
-      </div>
-      <form [formGroup]="bookingForm" (ngSubmit)="addBooking()">
-        <mat-form-field *ngIf="bookingForm.get('passport')">
-          <mat-label>Passport</mat-label>
-          <input
-            type="text"
-            matInput
-            formControlName="passport"
-            placeholder="Passport Number"
-          />
-        </mat-form-field>
-        <mat-form-field>
-          <mat-label>Room Id</mat-label>
-          <input
-            type="text"
-            matInput
-            formControlName="roomId"
-            placeholder="Room Id"
-          />
-        </mat-form-field>
-        <mat-form-field>
-          <input
-            type="text"
-            matInput
-            formControlName="guestName"
-            placeholder="Guest Name"
-          />
-          {{bookingForm.get('guestName')?.errors | json}}
-          <mat-error *ngIf="bookingForm.get('guestName')?.hasError('minlength')">
-            Guest Name should be minimun 5 characters!
-          </mat-error>
-          <!-- <mat-error
+{{bookingForm.invalid | json}}
+{{bookingForm.valid | json}}
+<div>
+  <button mat-raised-button color="primary" type="button" (click)="addPassport()">
+    Add Passport
+  </button>
+</div>
+<div>
+  <button mat-raised-button color="primary" type="button" (click)="deletePassport()">
+    delete Passport
+  </button>
+</div>
+<form [formGroup]="bookingForm" (ngSubmit)="addBooking()">
+  <mat-form-field *ngIf="bookingForm.get('passport')">
+    <mat-label>Passport</mat-label>
+    <input type="text" matInput formControlName="passport" placeholder="Passport Number" />
+  </mat-form-field>
+  <mat-form-field>
+    <mat-label>Room Id</mat-label>
+    <input type="text" matInput formControlName="roomId" placeholder="Room Id" />
+  </mat-form-field>
+  <mat-form-field>
+    <input type="text" matInput formControlName="guestName" placeholder="Guest Name" />
+    {{bookingForm.get('guestName')?.errors | json}}
+    <mat-error *ngIf="bookingForm.get('guestName')?.hasError('minlength')">
+      Guest Name should be minimun 5 characters!
+    </mat-error>
+    <!-- <mat-error
             *ngIf="
               emailFormControl.hasError('email') &&
               !emailFormControl.hasError('required')
@@ -80,32 +55,17 @@
           <mat-error *ngIf="emailFormControl.hasError('required')">
             Email is <strong>required</strong>
           </mat-error> -->
-        </mat-form-field>
-        <mat-form-field>
-          <input
-            type="email"
-            matInput
-            formControlName="guestEmail"
-            placeholder="Provide an Email"
-          />
-        </mat-form-field>
-        <mat-form-field>
-          <input
-            type="text"
-            matInput
-            formControlName="mobileNumber"
-            placeholder="Mobile Number"
-          />
-        </mat-form-field>
-        <mat-form-field>
-          <input
-            type="number"
-            matInput
-            formControlName="bookingAmount"
-            placeholder="Booking Amount"
-          />
-        </mat-form-field>
-        <!-- <mat-form-field>
+  </mat-form-field>
+  <mat-form-field>
+    <input type="email" matInput formControlName="guestEmail" placeholder="Provide an Email" />
+  </mat-form-field>
+  <mat-form-field>
+    <input type="text" matInput formControlName="mobileNumber" placeholder="Mobile Number" />
+  </mat-form-field>
+  <mat-form-field>
+    <input type="number" matInput formControlName="bookingAmount" placeholder="Booking Amount" />
+  </mat-form-field>
+  <mat-form-field>
           <mat-label>Checkin date</mat-label>
           <input matInput [matDatepicker]="picker" formControlName="checkinDate" />
           <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
@@ -123,90 +83,53 @@
           <input matInput [matDatepicker]="booking" formControlName="bookingDate" />
           <mat-datepicker-toggle matSuffix [for]="booking"></mat-datepicker-toggle>
           <mat-datepicker #booking></mat-datepicker>
-        </mat-form-field> -->
-        <div formGroupName="address">
-          <mat-accordion class="example-headers-align" multi>
-            <mat-expansion-panel>
-              <mat-expansion-panel-header>
-                <mat-panel-title> Address </mat-panel-title>
-              </mat-expansion-panel-header>
-      
-              <mat-form-field>
-                <input
-                  type="text"
-                  matInput
-                  formControlName="addressLine1"
-                  placeholder="Address Line1"
-                />
-                <mat-error
-                  *ngIf="
+        </mat-form-field>
+  <div formGroupName="address">
+    <mat-accordion class="example-headers-align" multi>
+      <mat-expansion-panel>
+        <mat-expansion-panel-header>
+          <mat-panel-title> Address </mat-panel-title>
+        </mat-expansion-panel-header>
+
+        <mat-form-field>
+          <input type="text" matInput formControlName="addressLine1" placeholder="Address Line1" />
+          <mat-error *ngIf="
                     bookingForm.get('address.addressLine1')?.hasError('required')
-                  "
-                >
-                  Address Line1 is <strong>required</strong>
-                </mat-error>
-              </mat-form-field>
-      
-              <mat-form-field>
-                <input
-                  type="text"
-                  matInput
-                  formControlName="addressLine2"
-                  placeholder="Address Line2"
-                />
-              </mat-form-field>
-              <mat-form-field>
-                <input
-                  type="text"
-                  matInput
-                  formControlName="city"
-                  placeholder="City"
-                />
-              </mat-form-field>
-              <mat-form-field>
-                <input
-                  type="text"
-                  matInput
-                  formControlName="state"
-                  placeholder="State"
-                />
-              </mat-form-field>
-              <mat-form-field>
-                <input
-                  type="text"
-                  matInput
-                  formControlName="country"
-                  placeholder="Country"
-                />
-              </mat-form-field>
-              <mat-form-field>
-                <input
-                  type="text"
-                  matInput
-                  formControlName="zipCode"
-                  placeholder="Pin Codes"
-                />
-              </mat-form-field>
-            </mat-expansion-panel>
-          </mat-accordion>
-        </div>
-        <div>
-          <button
-            mat-raised-button
-            color="primary"
-            type="button"
-            (click)="addGuest()"
-          >
-            Add Guest
-          </button>
-        </div>
-        <div formArrayName="guests">
-          <mat-accordion class="example-headers-align" multi>
-            <mat-expansion-panel>
-              <mat-expansion-panel-header>
-                <mat-panel-title> Guests </mat-panel-title>
-              </mat-expansion-panel-header>
-              <!-- <div *ngFor="let guest of guests.controls; let i = index">
+                  ">
+            Address Line1 is <strong>required</strong>
+          </mat-error>
+        </mat-form-field>
+
+        <mat-form-field>
+          <input type="text" matInput formControlName="addressLine2" placeholder="Address Line2" />
+        </mat-form-field>
+        <mat-form-field>
+          <input type="text" matInput formControlName="city" placeholder="City" />
+        </mat-form-field>
+        <mat-form-field>
+          <input type="text" matInput formControlName="state" placeholder="State" />
+        </mat-form-field>
+        <mat-form-field>
+          <input type="text" matInput formControlName="country" placeholder="Country" />
+        </mat-form-field>
+        <mat-form-field>
+          <input type="text" matInput formControlName="zipCode" placeholder="Pin Codes" />
+        </mat-form-field>
+      </mat-expansion-panel>
+    </mat-accordion>
+  </div>
+  <div>
+    <button mat-raised-button color="primary" type="button" (click)="addGuest()">
+      Add Guest
+    </button>
+  </div>
+  <div formArrayName="guests">
+    <mat-accordion class="example-headers-align" multi>
+      <mat-expansion-panel>
+        <mat-expansion-panel-header>
+          <mat-panel-title> Guests </mat-panel-title>
+        </mat-expansion-panel-header>
+        <!-- <div *ngFor="let guest of guests.controls; let i = index">
                 <div [formGroupName]="i">
                   <mat-form-field>
                     <input
@@ -245,17 +168,15 @@
                   </button>
                 </div>
               </div> -->
-            </mat-expansion-panel>
-          </mat-accordion>
-        </div>
-        <div>
-          <mat-checkbox class="example-margin" formControlName="tnc"
-            >TnC</mat-checkbox
-          >
-        </div>
-        <div>
-          <button [disabled]="bookingForm.invalid" mat-raised-button color="primary">
-            Book Room
-          </button>
-        </div>
-      </form>
+      </mat-expansion-panel>
+    </mat-accordion>
+  </div>
+  <div>
+    <mat-checkbox class="example-margin" formControlName="tnc">TnC</mat-checkbox>
+  </div>
+  <div>
+    <button [disabled]="bookingForm.invalid" mat-raised-button color="primary">
+      Book Room
+    </button>
+  </div>
+</form>
