nested forms and dynamic form manipulations

--- a/src/app/booking/booking.component.html
+++ b/src/app/booking/booking.component.html
@@ -129,7 +129,7 @@
         <mat-expansion-panel-header>
           <mat-panel-title> Guests </mat-panel-title>
         </mat-expansion-panel-header>
-        <!-- <div *ngFor="let guest of guests.controls; let i = index">
+        <div *ngFor="let guest of guests.controls; let i = index">
                 <div [formGroupName]="i">
                   <mat-form-field>
                     <input
@@ -167,7 +167,7 @@
                     Remove Guest
                   </button>
                 </div>
-              </div> -->
+              </div>
       </mat-expansion-panel>
     </mat-accordion>
   </div>
