clean booking component

--- a/src/app/booking/booking.component.html
+++ b/src/app/booking/booking.component.html
@@ -1,4 +1,4 @@
-{{ bookingForm.value | json }}
+<!-- {{ bookingForm.value | json }} -->
 <!-- <p>booking works!</p>
 {{ bookingForm.pristine | json }}
 {{ bookingForm.dirty | json }} -->
@@ -17,8 +17,8 @@
       guestCountry: [''],
       guestZipCode: [''],
       guestCount: [''], -->
-{{bookingForm.invalid | json}}
-{{bookingForm.valid | json}}
+<!-- {{bookingForm.invalid | json}}
+{{bookingForm.valid | json}} -->
 <div>
   <button mat-raised-button color="primary" type="button" (click)="addPassport()">
     Add Passport
