--- a/src/app/app-nav/app-nav.component.html
+++ b/src/app/app-nav/app-nav.component.html
@@ -9,6 +9,7 @@
       <a mat-list-item routerLink="rooms/add">Add Rooms</a>
       <a mat-list-item routerLink="employees">Employees</a>
       <a mat-list-item routerLink="booking">Bookings</a>
+      <a mat-list-item routerLink="comment">Comments</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
